Style Logo in header

--- a/src/main.scss
+++ b/src/main.scss
@@ -43,9 +43,11 @@
 \************************************************************************/
 
 /* __ Header__logo  ---------------------------------------------------- */
-    
+    @import "blocks/header/__logo/header__logo.scss"; 
 /* __ __ logo__text -------------------------------------------------- */
-@import "blocks/header/__logo/__text/logo__text.scss"; 
+        @import "blocks/header/__logo/__text/logo__text.scss"; 
+/* __ __ logo__pic -------------------------------------------------- */
+        @import "blocks/header/__logo/__pic/logo__pic.scss"; 
 /************************************************************************\
   # BLOCK --- Banner end -------------------------------------------------
 \************************************************************************/
