Separate logo and menu as separate blocks

--- a/src/main.scss
+++ b/src/main.scss
@@ -42,12 +42,18 @@
   # BLOCK --- Header start -----------------------------------------------
 \************************************************************************/
 
-/* __ Header__logo  ---------------------------------------------------- */
-    @import "blocks/header/__logo/header__logo.scss"; 
-/* __ __ logo__text -------------------------------------------------- */
-        @import "blocks/header/__logo/__text/logo__text.scss"; 
-/* __ __ logo__pic -------------------------------------------------- */
-        @import "blocks/header/__logo/__pic/logo__pic.scss"; 
+/* logo  ---------------------------------------------------- */
+    @import "blocks/logo/logo.scss"; 
+/* __ logo__text -------------------------------------------------- */
+        @import "blocks/logo/__text/logo__text.scss"; 
+/* __ logo__pic -------------------------------------------------- */
+        @import "blocks/logo/__pic/logo__pic.scss"; 
+/* menu  ---------------------------------------------------- */
+
+/* __ menu__item -------------------------------------------------- */
+        @import "blocks/menu/__item/menu__item.scss"; 
+/* __ menu__link -------------------------------------------------- */
+        @import "blocks/menu/__link/menu__link.scss"; 
 /************************************************************************\
   # BLOCK --- Banner end -------------------------------------------------
 \************************************************************************/
