Position blocks within header

--- a/src/main.scss
+++ b/src/main.scss
@@ -41,7 +41,8 @@
 /************************************************************************\
   # BLOCK --- Header start -----------------------------------------------
 \************************************************************************/
-
+/* header  ---------------------------------------------------- */
+    @import "blocks/header/header.scss"; 
 /* logo  ---------------------------------------------------- */
     @import "blocks/logo/logo.scss"; 
 /* __ logo__text -------------------------------------------------- */
