--- a/static/main.css
+++ b/static/main.css
@@ -435,6 +435,15 @@ template {
 /************************************************************************\
   # BLOCK --- Header start -----------------------------------------------
 \************************************************************************/
+/* header  ---------------------------------------------------- */
+.header {
+  width: 940px;
+  height: 113px;
+  margin: 0 auto 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+
 /* logo  ---------------------------------------------------- */
 .logo {
   display: flex;
