Set header as sticky at top

--- a/src/main.scss
+++ b/src/main.scss
@@ -43,6 +43,8 @@
 \************************************************************************/
 /* header  ---------------------------------------------------- */
     @import "blocks/header/header.scss"; 
+/* __ header__wrapper -------------------------------------------------- */
+        @import "blocks/header/__wrapper/header__wrapper.scss"; 
 /* logo  ---------------------------------------------------- */
     @import "blocks/logo/logo.scss"; 
 /* __ logo__text -------------------------------------------------- */
@@ -55,6 +57,9 @@
         @import "blocks/menu/__item/menu__item.scss"; 
 /* __ menu__link -------------------------------------------------- */
         @import "blocks/menu/__link/menu__link.scss"; 
+
+/* banner  ---------------------------------------------------- */
+    @import "blocks/banner/banner.scss"; 
 /************************************************************************\
   # BLOCK --- Banner end -------------------------------------------------
 \************************************************************************/
