Add background image for banner

--- a/static/main.css
+++ b/static/main.css
@@ -514,7 +514,8 @@ template {
 
 /* banner  ---------------------------------------------------- */
 .banner {
-  margin-top: 113px; }
+  margin-top: 113px;
+  background: url("../img/banner/background.png"); }
 
 /************************************************************************\
   # BLOCK --- Banner end -------------------------------------------------
