--- a/src/blocks/header/__wrapper/header__wrapper.scss
+++ b/src/blocks/header/__wrapper/header__wrapper.scss
@@ -1,5 +1,6 @@
 .header__wrapper {
-    width: 940px;
+    width: 100%;
+    max-width: 940px;
     height: 113px;
     margin: 0 auto 0 auto;
     display: flex;
