--- a/src/main.scss
+++ b/src/main.scss
@@ -60,6 +60,13 @@
 
 /* banner  ---------------------------------------------------- */
     @import "blocks/banner/banner.scss"; 
+/* __ banner__container -------------------------------------------------- */
+        @import "blocks/banner/__container/banner__container.scss"; 
+/* __ banner__title -------------------------------------------------- */
+        @import "blocks/banner/__title/banner__title.scss"; 
+
+/* button  ---------------------------------------------------- */
+    @import "blocks/button/button.scss"; 
 /************************************************************************\
   # BLOCK --- Banner end -------------------------------------------------
 \************************************************************************/
