--- a/src/blocks/banner/banner.scss
+++ b/src/blocks/banner/banner.scss
@@ -1,6 +1,7 @@
 .banner {
     margin-top: 113px;
     background: url("../img/banner/background.png");
+    background-size: cover;
     height: 530px;
     position: relative;
     z-index: -2;
