--- a/src/main.scss
+++ b/src/main.scss
@@ -64,6 +64,8 @@
         @import "blocks/banner/__container/banner__container.scss"; 
 /* __ banner__title -------------------------------------------------- */
         @import "blocks/banner/__title/banner__title.scss"; 
+/* __ banner__subtitle -------------------------------------------------- */
+        @import "blocks/banner/__subtitle/banner__subtitle.scss"; 
 
 /* button  ---------------------------------------------------- */
     @import "blocks/button/button.scss"; 
