--- a/src/blocks/banner/__container/banner__container.scss
+++ b/src/blocks/banner/__container/banner__container.scss
@@ -3,7 +3,7 @@
     height: 290px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     text-align: center;
 }
