--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -4,7 +4,17 @@
     height: 60px;
     border: none;
     position: relative;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 100;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, .7);
+    letter-spacing: -1px;
+    cursor: pointer;
+    z-index: 2;
 }
+
 
 .button::before {
     content: "";
@@ -28,4 +38,8 @@
     height: 60px;
     border-radius: 50%;
     z-index: -1;
+}
+
+.button:hover, .button:hover::before, .button:hover::after {
+    background-color: #60af5a;
 }
