Style button for 'contact' section

--- a/src/main.scss
+++ b/src/main.scss
@@ -67,8 +67,12 @@
 /* __ banner__subtitle -------------------------------------------------- */
         @import "blocks/banner/__subtitle/banner__subtitle.scss"; 
 
+/* contact  ---------------------------------------------------- */
+    @import "blocks/contact/contact.scss"; 
 /* button  ---------------------------------------------------- */
     @import "blocks/button/button.scss"; 
+/* __ button--rectangle -------------------------------------------------- */
+        @import "blocks/button/--rectangle/button--rectangle.scss"; 
 /************************************************************************\
   # BLOCK --- Banner end -------------------------------------------------
 \************************************************************************/
