--- a/static/main.css
+++ b/static/main.css
@@ -441,7 +441,8 @@ template {
   background-color: #FFFFFF;
   position: fixed;
   top: 0;
-  left: 0; }
+  left: 0;
+  z-index: 100; }
 
 /* __ header__wrapper -------------------------------------------------- */
 .header__wrapper {
