Style header for mobile first

--- a/src/main.scss
+++ b/src/main.scss
@@ -52,11 +52,14 @@
 /* __ logo__pic -------------------------------------------------- */
         @import "blocks/logo/__pic/logo__pic.scss"; 
 /* menu  ---------------------------------------------------- */
-
+/* __ menu__list -------------------------------------------------- */
+        @import "blocks/menu/__list/menu__list.scss"; 
 /* __ menu__item -------------------------------------------------- */
         @import "blocks/menu/__item/menu__item.scss"; 
 /* __ menu__link -------------------------------------------------- */
         @import "blocks/menu/__link/menu__link.scss"; 
+/* __ menu__link -------------------------------------------------- */
+        @import "blocks/menu/__button/menu__button.scss"; 
 
 /* banner  ---------------------------------------------------- */
     @import "blocks/banner/banner.scss"; 
