--- a/src/blocks/button/--menu/button--menu.scss
+++ b/src/blocks/button/--menu/button--menu.scss
@@ -17,3 +17,10 @@
     color: #222222;
     border: 2px solid #222222;
 }
+
+
+@media all and (min-width: 650px) {
+    .button--menu {
+        display: none;
+    }
+}
