--- a/src/blocks/button/--menu/button--menu.scss
+++ b/src/blocks/button/--menu/button--menu.scss
@@ -12,6 +12,7 @@
     border-radius: 5px;
     display: flex;
     align-items: center;
+    transition: all 300ms linear;
 }
 
 
@@ -19,10 +20,52 @@
     color: #222222;
     border: 2px solid #222222;
 }
+.button--menu:hover g {
+  stroke: #000000;
+}
 
 
 @media all and (min-width: 650px) {
     .button--menu {
         display: none;
     }
+}
+
+.button--menu span {
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.button--menu .icon__close line {
+  opacity: 0;
+  transform: translateY(40px);
+}
+
+.button--menu .icon__open {
+  opacity: 1;
+  transform: translateY(-40px);
+}
+
+.button--open .icon__open {
+  transform: translateY(-40px);
+  opacity: 0;
+  transition: all 300ms linear;
+}
+
+.button--open .icon__close line {
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 300ms linear;
+}
+
+.button--close .icon__open {
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 300ms linear;
+}
+
+.button--close .icon__close line {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 300ms linear;
 }
