Style menu for mobile and add action to the menu button to show menu

--- a/src/main.scss
+++ b/src/main.scss
@@ -54,6 +54,8 @@
 /* menu  ---------------------------------------------------- */
 /* __ menu__list -------------------------------------------------- */
         @import "blocks/menu/__list/menu__list.scss"; 
+/* __>> menu__list--open -------------------------------------------------- */
+        @import "blocks/menu/__list/--open/menu__list--open.scss"; 
 /* __ menu__item -------------------------------------------------- */
         @import "blocks/menu/__item/menu__item.scss"; 
 /* __ menu__link -------------------------------------------------- */
