--- a/static/main.css
+++ b/static/main.css
@@ -515,6 +515,18 @@ template {
 @media all and (min-width: 650px) {
   .menu__list {
     display: flex; } }
+/* __>> menu__list--open -------------------------------------------------- */
+.menu__list--open {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  position: absolute;
+  top: 113px;
+  left: 0;
+  background-color: white;
+  width: 100%; }
+
 /* __ menu__item -------------------------------------------------- */
 .menu__item {
   display: inline-block;
