--- a/static/main.css
+++ b/static/main.css
@@ -519,13 +519,17 @@ template {
 .menu__list--open {
   display: flex;
   flex-direction: column;
-  align-content: center;
   align-items: center;
+  justify-content: space-around;
   position: absolute;
-  top: 113px;
+  top: 100px;
   left: 0;
   background-color: white;
-  width: 100%; }
+  width: 100%;
+  height: 300px;
+  -webkit-box-shadow: 0px 13px 22px 0px rgba(0, 0, 0, 0.37);
+  -moz-box-shadow: 0px 13px 22px 0px rgba(0, 0, 0, 0.37);
+  box-shadow: 0px 13px 22px 0px rgba(0, 0, 0, 0.37); }
 
 /* __ menu__item -------------------------------------------------- */
 .menu__item {
