--- a/src/blocks/header/__wrapper/header__wrapper.scss
+++ b/src/blocks/header/__wrapper/header__wrapper.scss
@@ -7,3 +7,9 @@
     align-items: center;
     justify-content: space-between;
 }
+
+@media screen and (orientation: landscape) {
+    .header__wrapper {
+        height: 50px;
+    }
+}
