Change banner margin-top for landscape orientation

--- a/src/blocks/banner/banner.scss
+++ b/src/blocks/banner/banner.scss
@@ -19,3 +19,9 @@
     left: 0;
     z-index: 1;
 }
+
+@media screen and (orientation: landscape) {
+    .banner {
+        margin-top: 50px;
+    }
+}
