--- a/src/blocks/menu/__list/--open/menu__list--open.scss
+++ b/src/blocks/menu/__list/--open/menu__list--open.scss
@@ -13,3 +13,9 @@
        -moz-box-shadow: 0px 13px 22px 0px rgba(0,0,0,0.37);
             box-shadow: 0px 13px 22px 0px rgba(0,0,0,0.37);
 }
+
+@media screen and (orientation: landscape) {
+    .menu__list--open {
+        top: 40;
+    }
+}
