--- a/static/main.css
+++ b/static/main.css
@@ -534,6 +534,9 @@ template {
   -moz-box-shadow: 0px 13px 22px 0px rgba(0, 0, 0, 0.37);
   box-shadow: 0px 13px 22px 0px rgba(0, 0, 0, 0.37); }
 
+@media screen and (orientation: landscape) {
+  .menu__list--open {
+    top: 40; } }
 /* __ menu__item -------------------------------------------------- */
 .menu__item {
   display: inline-block;
