--- a/src/blocks/banner/banner.scss
+++ b/src/blocks/banner/banner.scss
@@ -20,7 +20,7 @@
     z-index: 1;
 }
 
-@media screen and (orientation: landscape) {
+@media screen and (max-device-width: 667px) and (orientation: landscape) {
     .banner {
         margin-top: 50px;
     }
