Style Services section subtitle

--- a/src/main.scss
+++ b/src/main.scss
@@ -76,7 +76,9 @@
     @import "blocks/services/services.scss"; 
 /* __ services__header -------------------------------------------------- */
         @import "blocks/services/__header/services__header.scss";  
-/* __ services__header -------------------------------------------------- */
+/* __ services__subtitle -------------------------------------------------- */
+        @import "blocks/services/__subtitle/services__subtitle.scss";  
+/* __ services__items-wrapper -------------------------------------------------- */
         @import "blocks/services/__items-wrapper/services__items-wrapper.scss";  
 
 
