Style list points as checkmarks

--- a/src/main.scss
+++ b/src/main.scss
@@ -82,6 +82,9 @@
         @import "blocks/services/__items-wrapper/services__items-wrapper.scss";  
 
 
+/* offer  ---------------------------------------------------- */
+    @import "blocks/offer/__list/offer__list.scss"; 
+
 /* contact  ---------------------------------------------------- */
     @import "blocks/contact/contact.scss"; 
 /* button  ---------------------------------------------------- */
