--- a/src/blocks/services/__items-wrapper/services__items-wrapper.scss
+++ b/src/blocks/services/__items-wrapper/services__items-wrapper.scss
@@ -1,5 +1,5 @@
 .services__items-wrapper {
-   width: 940px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -8,5 +8,6 @@
 @media all and (min-width: 975px) {
     .services__items-wrapper {
         flex-direction: row;
+        width: 940px;
     }
 }
