--- a/src/blocks/header/__wrapper/header__wrapper.scss
+++ b/src/blocks/header/__wrapper/header__wrapper.scss
@@ -8,6 +8,10 @@
     justify-content: space-between;
 }
 
+.header__wrapper a {
+    text-decoration: none;
+}
+
 @media only screen and (max-device-width: 900px) and (orientation: landscape) {
     .header__wrapper {
         height: 50px;
