--- a/src/blocks/services/services.scss
+++ b/src/blocks/services/services.scss
@@ -1,8 +1,13 @@
 .services {
-    height: 535px;
+    height: 735px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+@media all and (min-width: 975px) {
+    .services {
+    height: 535px;
+    }
+}
